--- a/pampa_display_test_v2.html
+++ b/pampa_display_test_v2.html
@@ -63,31 +63,31 @@
     <div class="container">
         <!-- Channel 1 - Water Level -->
         <div class="card">
-            <div class="card-header">Water Level</div>
+            <div class="card-header">pampa_level</div>
             <div class="card-body">
-                <div class="value-box" id="water_level">--</div>
+                <div class="value-box" id="pampa_level">--</div>
                 <div class="unit">cm</div>
-                <div class="timestamp" id="water_level_time">Waiting for updates...</div>
+                <div class="timestamp" id="pampa_level_time">Waiting for updates...</div>
             </div>
         </div>
 
         <!-- Channel 2 - Temperature -->
         <div class="card">
-            <div class="card-header">Temperature</div>
+            <div class="card-header">HSB_actuator</div>
             <div class="card-body">
-                <div class="value-box" id="temperature">--</div>
-                <div class="unit">°C</div>
-                <div class="timestamp" id="temperature_time">Waiting for updates...</div>
+                <div class="value-box" id="HSB_actuator">--</div>
+                <div class="unit">status</div>
+                <div class="timestamp" id="HSB_actuator_time">Waiting for updates...</div>
             </div>
         </div>
 
         <!-- Channel 3 - Pressure -->
         <div class="card">
-            <div class="card-header">Pressure</div>
+            <div class="card-header">icsr_water</div>
             <div class="card-body">
-                <div class="value-box" id="pressure">--</div>
-                <div class="unit">Pa</div>
-                <div class="timestamp" id="pressure_time">Waiting for updates...</div>
+                <div class="value-box" id="icsr_water">--</div>
+                <div class="unit">cm</div>
+                <div class="timestamp" id="icsr_water_time">Waiting for updates...</div>
             </div>
         </div>
     </div>
