--- a/time-series-test_2.html
+++ b/time-series-test_2.html
@@ -85,7 +85,7 @@
         <div class="card">
             <div class="card-header">Makne</div>
             <div class="card-body">
-                <div class="value-box" id="HSB_actuator">--</div>
+                <div class="value-box" id="Makne_actuator">--</div>
                 <div class="unit">status</div>
                 <div class="timestamp" id="HSB_actuator_time">Waiting for updates...</div>
             </div>
