--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Padur Water Management</title>
+    <title>IITM Water Distribution Network</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700">
     <link rel="icon" href="IIT_Madras_Logo.ico" type="image/x-icon">
     <link rel="manifest" href="/IITM-LVL-DSPLY-RT-MON/manifest.json">
@@ -71,14 +71,14 @@
 <body>
 
     <img src="IIT_Madras_Logo.png" alt="IIT Madras Logo" width="250">
-    <h1>IITM WDN</h1>
-    <h2>By IIT Madras</h2>
+    <h1>IITM Water Distribution Network</h1>
+    <h2></h2>
 
-    <h3>Language / भाषा / மொழி</h3>
+    <h3>Select the Tank/Sump</h3>
     <div class="button-container">
-        <a href="Tank_select_eng.html" class="dashboard-button">English</a>
+        <a href="Pampa_eng.html" class="dashboard-button">Pampa</a>
         <!-- <a href="Tank_select_hin.html" class="dashboard-button">हिन्दी</a> -->
-        <a href="Tank_select_tam.html" class="dashboard-button">தமிழ்</a>
+        <a href="Mandakini_eng.html" class="dashboard-button">Mandakini</a>
     </div>
 
     <button id="install-button" class="install-btn" onclick="installPWA()">Install App</button>
