--- a/Pampa_eng.html
+++ b/Pampa_eng.html
@@ -69,7 +69,7 @@
     <div class="container">
         <div class="card">
             <div>
-                <div class="card-header">Pampa - Current Level</div>
+                <div class="card-header">Pampa Sump - Current Level</div>
                 <div class="value-box" id="water_level_cm">--</div>
                 <div class="unit">cm</div>
                 <div class="value-box" id="water_level_feet">--</div>
