--- a/Mandakini_eng.html
+++ b/Mandakini_eng.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pampa Sump</title>
+    <title>Mandakini Sump</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -69,7 +69,8 @@
     <div class="container">
         <div class="card">
             <div>
-                <div class="card-header">Mandakini Sump - Current Level</div>
+                <div class="card-header">Mandakini Sump</div>
+                <div class="card-header">Current Level</div>
                 <div class="value-box" id="water_level_cm">--</div>
                 <div class="unit">cm</div>
                 <div class="value-box" id="water_level_feet">--</div>
