--- a/Mandakini_eng.html
+++ b/Mandakini_eng.html
@@ -30,7 +30,7 @@
             background: #007bff;
             color: white;
             padding: 10px;
-            font-size: 16px;
+            font-size: 25px;
             font-weight: bold;
             border-radius: 5px 5px 0 0;
         }
@@ -69,8 +69,7 @@
     <div class="container">
         <div class="card">
             <div>
-                <div class="card-header">Mandakini Sump</div>
-                <div class="card-header">Current Level</div>
+                <div class="card-header">Mandakini Sump<br><br>Current Level</div>
                 <div class="value-box" id="water_level_cm">--</div>
                 <div class="unit">cm</div>
                 <div class="value-box" id="water_level_feet">--</div>
