--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 
     <h3>Select the Tank/Sump</h3>
     <div class="button-container">
-        <a href="Pampa_eng.html" class="dashboard-button">Pampa</a>
-        <!-- <a href="Tank_select_hin.html" class="dashboard-button">हिन्दी</a> -->
-        <a href="Mandakini_eng.html" class="dashboard-button">Mandakini</a>
+        <a href="Pampa_eng.html" class="dashboard-button">Pampa Sump</a>
+        <a href="Mandakini_eng.html" class="dashboard-button">Mandakini Sump</a>
+        <a href="ICSR_eng.html" class="dashboard-button">ICSR Sump</a>
     </div>
 
     <button id="install-button" class="install-btn" onclick="installPWA()">Install App</button>
