--- a/ICSR_eng.html
+++ b/ICSR_eng.html
@@ -61,6 +61,7 @@
             display: inline-block;
             margin-top: 10px;
             background: gray;
+            border: 5px solid black; /* Adds a 5px black border */
         }
     </style>
 </head>
