--- a/ICSR_eng.html
+++ b/ICSR_eng.html
@@ -57,11 +57,11 @@
         .indicator {
             width: 100px;
             height: 100px;
-            border-radius: 50px;
+            border-radius:50%;
             display: inline-block;
             margin-top: 10px;
             background: gray;
-            border: 5px solid black; /* Adds a 5px black border */
+            border: 1px solid black; /* Adds a 5px black border */
         }
     </style>
 </head>
