--- a/Mandakini_eng.html
+++ b/Mandakini_eng.html
@@ -57,10 +57,11 @@
         .indicator {
             width: 100px;
             height: 100px;
-            border-radius: 50px;
+            border-radius: 50%;
             display: inline-block;
             margin-top: 10px;
             background: gray;
+            border: 1px solid black;
         }
     </style>
 </head>
