--- a/Mandakini_eng.html
+++ b/Mandakini_eng.html
@@ -71,7 +71,7 @@
         <div class="card">
             <div>
                 <div class="card-header">Mandakini Sump<br><br>Current Level</div>
-                <div class="value-box" id="water_level_cm">-- cm</div>
+                <div class="value-box" id="water_level_cm">-- cm</div><br>
 <!--                 <div class="unit">cm</div> -->
                 <div class="value-box" id="water_level_feet">--</div>
 <!--                 <div class="unit">Feet & Inches</div>            -->
