--- a/ICSR_eng.html
+++ b/ICSR_eng.html
@@ -77,9 +77,9 @@
 <!--                 <div class="unit">Feet & Inches</div>           
                 <div class="timestamp" id="water_level_time">Waiting for updates...</div> -->
                 <div class="indicator" id="water_level_indicator"></div>
-                <h3>Green - Water level normal</h3>
-                <h3>Yellow - Caution</h3>
-                <h3>Red - Water level low</h3>
+                <left><h3>Green  - Water level normal</h3></left>
+                <left><h3>Yellow - Caution</h3></left>
+                <left><h3>Red    - Water level low</h3></left>
             </div>
         </div>
     </div>
