--- a/ICSR_eng.html
+++ b/ICSR_eng.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ICSR Sump</title>
+    <title>ICSR Sump Water Level</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -44,11 +44,6 @@
             display: inline-block;
             margin-top: 10px;
         }
-        .unit {
-            font-size: 18px;
-            color: #777;
-            margin-top: 5px;
-        }
         .timestamp {
             font-size: 12px;
             color: #777;
@@ -70,11 +65,10 @@
     <div class="container">
         <div class="card">
             <div>
-                <div class="card-header">ICSR Sump<br><br>Current Level</div><br>
-                <div class="value-box" id="water_level_cm">-- cm</div>
-<!--                 <div class="unit">cm</div> -->
+                <h1>ICSR Sump</h1><br>
+                <div class="card-header">Current Level</div>
+                <div class="value-box" id="water_level_cm">-- cm</div><br>
                 <div class="value-box" id="water_level_feet">--</div>
-<!--                 <div class="unit">Feet & Inches</div>            -->
                 <div class="timestamp" id="water_level_time">Waiting for updates...</div>
                 <div class="indicator" id="water_level_indicator"></div>
                 <h3>Green - Water level normal</h3>
@@ -94,8 +88,6 @@
                 limits: { warning: 100, danger: 60 } 
             },
         };
-
-        let lastValues = {};
 
         function timeAgo(timestamp) {
             const now = new Date();
@@ -121,47 +113,50 @@
             const limits = channels[sensor].limits;
 
             if (value <= limits.danger) {
-                indicator.style.background = "red"; // Critical level
+                indicator.style.background = "red";
             } else if (value <= limits.warning) {
-                indicator.style.background = "yellow"; // Warning level
+                indicator.style.background = "yellow";
             } else {
-                indicator.style.background = "green"; // Normal level
+                indicator.style.background = "green";
             }
         }
 
         async function fetchThingSpeakData(sensor, details) {
-            const url = `https://api.thingspeak.com/channels/${details.channelID}/feeds.json?api_key=${details.apiKey}&results=1`;
+            const url = `https://api.thingspeak.com/channels/${details.channelID}/feeds.json?api_key=${details.apiKey}&results=10`;
 
             try {
                 const response = await fetch(url);
                 const data = await response.json();
-                const latestFeed = data.feeds[0];
+                const feeds = data.feeds;
 
-                if (latestFeed) {
-                    let newValue = latestFeed[details.field];
-                    const lastUpdated = latestFeed.created_at;
+                // Find the last valid (non-NaN) value
+                let lastValidValue = "--";
+                let lastUpdated = "No updates";
 
-                    if (newValue !== undefined && newValue !== lastValues[sensor]) {
-                        lastValues[sensor] = newValue;
-                        newValue = parseFloat(newValue);
-
-                        if (details.isInteger) {
-                            newValue = Math.round(newValue);
-                        } else {
-                            newValue = newValue.toFixed(details.precision || 2);
-                        }
-
-                        document.getElementById("water_level_cm").innerText = `${newValue} cm`;
-                        document.getElementById("water_level_time").innerText = "Updated " + timeAgo(lastUpdated);
-
-                        // Convert cm to feet & inches
-                        if (sensor === "water_level") {
-                            document.getElementById("water_level_feet").innerText = cmToFeetInches(newValue);
-                        }
-
-                        // Update the indicator
-                        updateIndicator(sensor, newValue);
+                for (let i = feeds.length - 1; i >= 0; i--) {
+                    let value = parseFloat(feeds[i][details.field]);
+                    if (!isNaN(value)) {
+                        lastValidValue = value;
+                        lastUpdated = feeds[i].created_at;
+                        break;
                     }
+                }
+
+                if (lastValidValue !== "--") {
+                    if (details.isInteger) {
+                        lastValidValue = Math.round(lastValidValue);
+                    } else {
+                        lastValidValue = lastValidValue.toFixed(details.precision || 2);
+                    }
+
+                    document.getElementById("water_level_cm").innerText = `${lastValidValue} cm`;
+                    document.getElementById("water_level_time").innerText = "Updated " + timeAgo(lastUpdated);
+
+                    if (sensor === "water_level") {
+                        document.getElementById("water_level_feet").innerText = cmToFeetInches(lastValidValue);
+                    }
+
+                    updateIndicator(sensor, lastValidValue);
                 }
             } catch (error) {
                 console.error(`Error fetching data for ${sensor}:`, error);
@@ -172,7 +167,7 @@
             Object.keys(channels).forEach(sensor => fetchThingSpeakData(sensor, channels[sensor]));
         }
 
-        setInterval(updateAllSensors, 5000); // Update every 5 seconds
+        setInterval(updateAllSensors, 1000);
         updateAllSensors();
     </script>
 
