--- a/ICSR_eng.html
+++ b/ICSR_eng.html
@@ -72,10 +72,6 @@
                 <div class="timestamp" id="water_level_time">Waiting for updates...</div>
                 <div class="indicator" id="water_level_indicator"></div>
             </div>
-        </div>
-
-        <!-- Block for Field6 (Additional Sensor) -->
-        <div class="card">
             <div>
                 <div class="card-header">Terrace Tank Water Level</div>
                 <div class="value-box" id="field6_cm">-- cm</div><br>
@@ -84,7 +80,12 @@
                 <div class="indicator" id="field6_indicator"></div>
             </div>
         </div>
-    </div>
+
+        <!-- Block for Field6 (Additional Sensor) 
+        <div class="card">
+            
+        </div>
+    </div> -->
 
     <script>
         const channels = {
