--- a/ICSR_eng.html
+++ b/ICSR_eng.html
@@ -12,9 +12,9 @@
             margin: 20px;
         }
         .back-button {
-            position: absolute;
-            top: 10px;
-            left: 10px;
+            position: fixed;
+            top: 20px;
+            left: 20px;
             padding: 10px 15px;
             font-size: 16px;
             background-color: #007bff;
@@ -22,6 +22,7 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            z-index: 1000;
         }
         .back-button:hover {
             background-color: #0056b3;
@@ -31,7 +32,7 @@
             flex-wrap: wrap;
             justify-content: center;
             gap: 20px;
-            margin-top: 50px;
+            margin-top: 70px; /* Increased margin to avoid overlap */
         }
         .card {
             width: 300px;
