--- a/Mandakini_eng.html
+++ b/Mandakini_eng.html
@@ -83,8 +83,9 @@
 
     <div class="container">
         <div class="card">
+            <h1>Mandakini Sump</h1><br><br>
             <div>
-                <div class="card-header">Mandakini Sump<br><br>Current Level</div>
+                <div class="card-header">Current Level</div>
                 <div class="value-box" id="water_level_cm">-- cm</div><br>
                 <div class="value-box" id="water_level_feet">--</div>
                 <div class="timestamp" id="water_level_time">Waiting for updates...</div>
