--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <a href="Pampa_eng.html" class="dashboard-button">Pampa Sump</a>
         <a href="Mandakini_eng.html" class="dashboard-button">Mandakini Sump</a>
         <a href="ICSR_eng.html" class="dashboard-button">ICSR Sump</a>
+        <a href="Himalaya_oht.html" class="dashboard-button">Himalaya OHT</a>
     </div>
 
     <button id="install-button" class="install-btn" onclick="installPWA()">Install App</button>
@@ -140,3 +141,4 @@
 
 </body>
 </html>
+
