Modify index.html with new links and cleanup
Updated links and removed commented password check script.

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 
     <h3>Select the Tank/Sump</h3>
     <div class="button-container">
+        <a href="main_sump.html" class="dashboard-button">Main Sump</a>
         <a href="Pampa_eng.html" class="dashboard-button">Pampa Sump</a>
         <a href="Mandakini_eng.html" class="dashboard-button">Mandakini Sump</a>
         <a href="ICSR_eng.html" class="dashboard-button">ICSR Sump</a>
@@ -141,4 +142,5 @@
 
 </body>
 </html>
+
 
