--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             font-family: 'Open Sans', sans-serif;
             font-size: 18px;
             text-align: center;
-            background-image: url('IITMZ.jpg');
+            background-image: url('IITM_bg.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -400,7 +400,7 @@
         <div class="spacer"></div>
         <div class="spacer"></div>
     
-    <img src="IIT_Madras_Logo.png" alt="IITMZ Logo" width="250">
+    <img src="IIT_Madras_Logo.png" alt="IITM Logo" width="250">
     <h1 data-i18n="app_title">IIT Madras Zanzibar Water Management</h1>
     <h2></h2>
 
