--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="manifest" href="/IITM-LVL-DSPLY-RT-MON/manifest.json">
     <link rel="alternate" href="/IITM-LVL-DSPLY-RT-MON/site.webmanifest">
     <meta name="theme-color" content="#007bff">
-    <meta name="description" content="Real-time water level monitoring system for IIT Madras Zanzibar">
+    <meta name="description" content="Real-time water level monitoring system for IIT Madras">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="IITM Water Mgmt">
@@ -401,7 +401,7 @@
         <div class="spacer"></div>
     
     <img src="IIT_Madras_Logo.png" alt="IITM Logo" width="250">
-    <h1 data-i18n="app_title">IIT Madras Zanzibar Water Management</h1>
+    <h1 data-i18n="app_title">IIT Madras Water Management</h1>
     <h2></h2>
 
     <h3 data-i18n="select_tank_sump">Select the Tank/Sump</h3>
