--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-i18n="app_title">IIT Madras Zanzibar Water Management</title>
+    <title data-i18n="app_title">IIT Madras Water Management</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700">
     <link rel="icon" href="IIT_Madras_Logo.ico" type="image/x-icon">
     <link rel="manifest" href="/IITM-LVL-DSPLY-RT-MON/manifest.json">
